CHATS_SIT/force-app/main/default/objects/T_MNL_CORR_CHKLST__c.object
<CustomObject>
        <fields>
        <fullName>CR107_Checklist_SPN__c</fullName>
        <label>CR107 Checklist (Spanish)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>checklist_CR107_SPN</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CR107_Checklist__c</fullName>
        <label>CR107 Checklist</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Checklist_CR107</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CR107_OTHER_TEXT__c</fullName>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>CR107_OTHER_TEXT</label>
        <type>TextArea</type>
    </fields>
	<fields>
        <fullName>CR212_Checklist_SPN__c</fullName>
        <label>CR212 Checklist(Spanish)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Checklist_CR212_SPN</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CR212_Checklist__c</fullName>
        <description>CR212 Checklist</description>
        <label>CR212 Checklist</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Checklist_CR212</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CR702_Checklist_SPN__c</fullName>
        <label>CR702 Checklist (Spanish)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Checklist_CR702_SPN</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CR702_Checklist__c</fullName>
        <label>CR702 Checklist</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Checklist_CR702</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CR702_TEXT__c</fullName>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>CR702_TEXT</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DTE_DEADLINE__c</fullName>
        <label>Date of Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IDN_CASE__c</fullName>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>Case ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IDN_CORR__c</fullName>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>Correspondence ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IDN_PROVR__c</fullName>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>Provider ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Manual Correspondence Checklist</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>M-{0000}</displayFormat>
        <label>Manual Correspondence Checklist Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Manual Correspondence Checklist</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>